--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="container-fluid">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Raymond's Portfolio</a>
+<div class="container">
+ 	<a class="navbar-brand" href="#">Raymond's Portfolio</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -29,8 +29,9 @@
     </ul>
   </div>
 </nav>
+<div>
 <!-- End Of NavBar -->
-
+<div class="container"></div>
 	<div class=name>
 		<img src="image.jpg" class="rounded-circle" id="me" alt="Picture Of Raymond">
 		<h1>Raymond Leung</h1>
