--- a/index.html
+++ b/index.html
@@ -4,55 +4,48 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>Raymond Leung's Portfolio</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-<div class="container">
- 	<a class="navbar-brand" href="#">Raymond's Portfolio</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-            <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<div>
-<!-- End Of NavBar -->
-<div class="container"></div>
+<div class="container col-xs-6"></div>
+
 	<div class=name>
 		<img src="image.jpg" class="rounded-circle" id="me" alt="Picture Of Raymond">
 		<h1>Raymond Leung</h1>
 		<h4>Front End Developer</h4>
 		<hr>
-		<div class="technology">
-			<h2>What I Can Do</h2>
-		</div>
 	</div>
+
 	<div class="social-media">
-		<div class="col-xs-6">
-			<a href="https://github.com/raymondl95" alt="Github">Github</a>
-		</div>
-		<div class="col-xs-6">
-			<a href="https://www.linkedin.com/in/raymond-k-leung" alt="LinkedIn">LinkedIn</a>	
-		</div>
+		<a href="https://www.linkedin.com/in/raymondl95/"><i class="fab fa-linkedin"></i> </a>
+		<a href="https://www.github.com/RaymondL95/"><i class="fab fa-github"></i></a>
 	</div>
-	<div class="projects">
+
+	<br>
+
+	<div class="project-section">
+		<h2>Projects</h2>
 		<ul>
-			<li><a href="https://raymondl95.github.io/Vietnam/">Landing Page</a></li>
-			<li><a href="https://raymondl95.github.io/fitness-web/www/">Fitness-Web</a></li>
+			<li>
+				<p>
+					A <a href="https://raymondl95.github.io/Vietnam/"><strong>Landing Page</strong></a> created using bootstrap and font-awesome
+				</p>
+			</li>
+
+			<li> 
+				<p>
+					<a href="https://raymondl95.github.io/fitness-web/www/"><strong>Fitness-Web</strong></a> is a fitness-based website to help newbies get started into fitness.
+				</p>
+			</li>
+
+			<li> 
+				<p>
+					<a href="https://store.steampowered.com/app/756980/Raymonds_Obstacle_Course/"><strong>Raymond's Obstacle Course</strong></a> is a 3D platformer created using Unity.
+				</p>
+			</li>
+
 		</ul>
 	</div>
 </div>
