--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="container col-xs-6"></div>
+<div class="container col-xs-6">
 
 	<div class=name>
 		<img src="image.jpg" class="rounded-circle" id="me" alt="Picture Of Raymond">
