--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			<li> 
 				<p>
-					<a href="https://raymondl95.github.io/fitness-web/www/"><strong>Fitness-Web</strong></a> is a fitness-based website to help newbies get started into fitness.
+					<a href="https://raymondl95.github.io/Todo-List"><strong>Todo-List</strong></a> is a simple task reminder.
 				</p>
 			</li>
 
