--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 	<div class=name>
 		<img src="image.jpg" class="rounded-circle" id="me" alt="Picture Of Raymond">
-		<h1>Raymond Leung</h1>
-		<h4>Front End Developer</h4>
+		<div class="nameText slideInLeft">
+			<h1>Raymond Leung</h1>
+			<h4>Front End Developer</h4>
+		</div>
 		<hr>
 	</div>
 
